--- a/Unittest/Unittest.csproj
+++ b/Unittest/Unittest.csproj
@@ -8,7 +8,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-		<PackageReference Include="xunit" Version="2.4.1" />
+		<PackageReference Include="MSTest.TestFramework" Version="3.8.3" />
+		<PackageReference Include="NUnit" Version="4.3.2" />
+		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
 		<PackageReference Include="Moq" Version="4.16.1" />
 	</ItemGroup>
