add new database

--- a/Eventary-API/appsettings.json
+++ b/Eventary-API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Database=Eventary;"
+    "conn": "Server=192.168.15.55;Port=3306;Database=i475652_eventary;Uid=i475652_eventary;Password=DZRznphkQpbsntH6XNLK;"
   },
   "AllowedHosts": "*"
 }
