docker-compose added watchtower

--- a/Eventary-API/appsettings.json
+++ b/Eventary-API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "conn": "Server=192.168.15.55;Port=3306;Database=i475652_eventary;Uid=i475652_eventary;Password=DZRznphkQpbsntH6XNLK;"
+    "conn": "Server=tcp:eventary-database.database.windows.net,1433;Initial Catalog=eventary-database;Persist Security Info=False;User ID=CloudSA7490ad32;Password=DZRznphkQpbsntH6XNLK;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
