--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -65,5 +65,5 @@ jobs:
       run: |
         docker container stop eventary-api || true
         docker container rm eventary-api || true
-        
-        docker run -d --name eventary-api -p 5254:5254 ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1
+        docker run -d --name eventary-api -p 5254:5254 ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
+
