--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,65 +7,52 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  build-and-docker:
     runs-on: self-hosted
+
     defaults:
       run:
-        working-directory: D:/Fontys/2025-2026/Semester 3.1/Individueel project/Eventary/Eventary-API
+        working-directory: 'D:/Fontys/2025-2026/Semester 3.1/Individueel project/Eventary/Eventary-API'
 
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
 
-    - name: Restore dependencies
-      run: dotnet restore Eventary-API.sln
+      - name: Restore dependencies
+        run: dotnet restore Eventary-API.sln
 
-    - name: Lint Check
-      run: |
-        dotnet format style Eventary-API.sln --verify-no-changes
-        dotnet format analyzers Eventary-API.sln --verify-no-changes
-      env:
-        DOTNET_NOLOGO: 1
+      - name: Lint Check
+        run: |
+          dotnet format style Eventary-API.sln --verify-no-changes
+          dotnet format analyzers Eventary-API.sln --verify-no-changes
+        env:
+          DOTNET_NOLOGO: 1
 
-    - name: Start SonarQube analysis
-      run: dotnet sonarscanner begin /k:"Eventary-API" /d:sonar.host.url="http://localhost:9000" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+      - name: Start SonarQube analysis
+        run: dotnet sonarscanner begin /k:"Eventary-API" /d:sonar.host.url="http://localhost:9000" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
-    - name: Build Solution
-      run: dotnet build Eventary-API.sln --no-restore --configuration Debug
+      - name: Build solution
+        run: dotnet build Eventary-API.sln --no-restore --configuration Debug
 
-    - name: End SonarQube analysis
-      run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+      - name: End SonarQube analysis
+        run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
-    - name: Run Unit Tests
-      run: dotnet test Unittest/Unittest.csproj --no-build --configuration Debug --verbosity normal
+      - name: Run unit tests
+        run: dotnet test Unittest/Unittest.csproj --no-build --configuration Debug --verbosity normal
 
-    - name: Build for Deployment
-      if: ${{ success() }}
-      run: dotnet build Eventary-API.sln --configuration Release --no-restore
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1 .
 
-  docker:
-    runs-on: ubuntu-latest
-    needs: build
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build Docker Image
-      run: docker build -t eventary-api:v1 -f ./Dockerfile .
-
-    - name: Push Docker Image to DockerHub
-      run: |
-        docker tag eventary-api:v1 ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1
-        docker tag eventary-api:v1 ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1
-        docker push ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1
+          docker tag ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1 ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
