--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,55 +8,44 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: '8.0.x'
 
-    - name: Restore dependencies
-      run: dotnet restore ./Eventary-API.sln
-
-    - name: Lint Check
+    - name: Add dotnet tools to PATH
       run: |
+        echo "$env:USERPROFILE\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      shell: pwsh
+
+    - name: Install SonarScanner
+      run: dotnet tool install --global dotnet-sonarscanner
+      shell: pwsh
+
+    - name: Run Build + Lint + Test + SonarQube analysis
+      run: |
+        dotnet sonarscanner begin `
+          /k:"eventary-api" `
+          /d:sonar.host.url="http://localhost:9000" `
+          /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        
+        dotnet restore ./Eventary-API.sln
+
         dotnet format style ./Eventary-API.sln --verify-no-changes
         dotnet format analyzers ./Eventary-API.sln --verify-no-changes
-      env:
-        DOTNET_NOLOGO: 1
 
-    - name: Build Solution
-      run: dotnet build ./Eventary-API.sln --no-restore --configuration Debug
+        dotnet build ./Eventary-API.sln --no-restore --configuration Debug
 
-    - name: Run Unit Tests
-      run: dotnet test ./Unittest/Unittest.csproj --no-build --configuration Debug --verbosity normal
+        dotnet test ./Unittest/Unittest.csproj --no-build --configuration Debug --verbosity normal
+
+        dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+      shell: pwsh
 
     - name: Build for Deployment
-      if: ${{ success() }}
-      run: dotnet build ./Eventary-API.sln --configuration Release --no-restore
-
-  docker:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build Docker Image
-      run: docker build -t eventary-api:v1 -f ./Dockerfile .
-
-    - name: Push Docker Image to DockerHub
-      run: |
-        docker tag eventary-api:v1 ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1
-        docker tag eventary-api:v1 ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1
-        docker push ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
+      if: ${{ suc
