--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,13 +11,12 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.x'
+        dotnet-version: 8.0.x
 
     - name: Add dotnet tools to PATH
       run: |
@@ -28,24 +27,62 @@ jobs:
       run: dotnet tool install --global dotnet-sonarscanner
       shell: pwsh
 
-    - name: Run Build + Lint + Test + SonarQube analysis
+    - name: Begin SonarQube analysis
       run: |
         dotnet sonarscanner begin `
           /k:"eventary-api" `
           /d:sonar.host.url="http://localhost:9000" `
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-        
-        dotnet restore ./Eventary-API.sln
+      shell: pwsh
 
+    - name: Restore dependencies
+      run: dotnet restore ./Eventary-API.sln
+      shell: pwsh
+
+    - name: Lint Check
+      run: |
         dotnet format style ./Eventary-API.sln --verify-no-changes
         dotnet format analyzers ./Eventary-API.sln --verify-no-changes
+      env:
+        DOTNET_NOLOGO: 1
+      shell: pwsh
 
-        dotnet build ./Eventary-API.sln --no-restore --configuration Debug
+    - name: Build Solution
+      run: dotnet build ./Eventary-API.sln --no-restore --configuration Debug
+      shell: pwsh
 
-        dotnet test ./Unittest/Unittest.csproj --no-build --configuration Debug --verbosity normal
+    - name: Run Unit Tests
+      run: dotnet test ./Unittest/Unittest.csproj --no-build --configuration Debug --verbosity normal
+      shell: pwsh
 
-        dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+    - name: End SonarQube analysis
+      run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
       shell: pwsh
 
     - name: Build for Deployment
-      if: ${{ suc
+      if: ${{ success() }}
+      run: dotnet build ./Eventary-API.sln --configuration Release --no-restore
+      shell: pwsh
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker Image
+      run: docker build -t eventary-api:v1 -f ./Dockerfile .
+
+    - name: Push Docker Image to DockerHub
+      run: |
+        docker tag eventary-api:v1 ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1
+        docker tag eventary-api:v1 ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/eventary-api:v1
+        docker push ${{ secrets.DOCKER_USERNAME }}/eventary-api:latest
