--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Add dotnet tools to PATH
       run: |
         echo "$env:USERPROFILE\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      shell: pwsh
+      shell: powershell
 
     - name: Install SonarScanner
       run: dotnet tool install --global dotnet-sonarscanner
