--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,10 +17,14 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+        install-dir: ${{ runner.temp }}/.dotnet
+
+    - name: Add .NET to PATH
+      run: echo "${{ runner.temp }}/.dotnet" >> $env:GITHUB_PATH
+      shell: powershell
 
     - name: Add dotnet tools to PATH
-      run: |
-        echo "$env:USERPROFILE\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      run: echo "$env:USERPROFILE\.dotnet\tools" >> $env:GITHUB_PATH
       shell: powershell
 
     - name: Install SonarScanner
