--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,8 +43,12 @@ jobs:
       run: dotnet build ./Eventary-API.sln --no-restore --configuration Debug
       shell: powershell
 
-    - name: Run Unit Tests
-      run: dotnet test ./Unittest/Unittest.csproj --no-build --configuration Debug --verbosity normal
+    - name: Run Unit Tests with Coverage
+      run: dotnet test ./Unittest/Unittest.csproj `
+            /p:CollectCoverage=true `
+            /p:CoverletOutputFormat=cobertura `
+            /p:CoverletOutput=TestResults/ `
+            --no-build --configuration Debug
       shell: powershell
 
     - name: End SonarQube analysis
