--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: .NET CI/CD 
+name: .NET CI/CD
 
 on:
   push:
@@ -32,7 +32,8 @@ jobs:
         dotnet sonarscanner begin `
           /k:"eventary-api" `
           /d:sonar.host.url="http://localhost:9000" `
-          /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          /d:sonar.login="${{ secrets.SONAR_TOKEN }}" `
+          /d:sonar.cs.opencover.reportsPaths="Unittest/TestResults/coverage.cobertura.xml"
       shell: powershell
 
     - name: Restore dependencies
