--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,6 +27,15 @@ jobs:
       run: echo "$env:USERPROFILE\.dotnet\tools" >> $env:GITHUB_PATH
       shell: powershell
 
+    - name: Check if coverage file exists
+      run: |
+        if (Test-Path "Unittest/TestResults/coverage.cobertura.xml") {
+          Write-Host "Coverage file found"
+        } else {
+          Write-Host "Coverage file NOT found"
+        }
+      shell: powershell
+
     - name: Begin SonarQube analysis
       run: |
         dotnet sonarscanner begin `
