--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
           /k:"eventary-api" `
           /d:sonar.host.url="http://localhost:9000" `
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}" `
-          /d:sonar.cs.coverage.reportPaths="Unittest/TestResults/coverage.cobertura.xml" `
+          /d:sonar.cs.coverage.reportPaths="Unittest/TestResults/CoverageReport/SonarQube.xml" `
           /d:sonar.sources="CORE,DAL" `
           /d:sonar.inclusions="**/*.cs"
       shell: powershell
@@ -55,12 +55,23 @@ jobs:
             --no-build --configuration Debug
       shell: powershell
 
-    - name: Check if coverage file exists
+    - name: Install ReportGenerator
+      run: dotnet tool install --global dotnet-reportgenerator-globaltool
+      shell: powershell
+
+    - name: Convert coverage report for SonarQube
+      run: reportgenerator `
+             -reports:"Unittest/TestResults/coverage.cobertura.xml" `
+             -targetdir:"Unittest/TestResults/CoverageReport" `
+             -reporttypes:"SonarQube"
+      shell: powershell
+
+    - name: Check if normalized coverage file exists
       run: |
-        if (Test-Path "Unittest/TestResults/coverage.cobertura.xml") {
-          Write-Host "Coverage file found"
+        if (Test-Path "Unittest/TestResults/CoverageReport/SonarQube.xml") {
+          Write-Host "Normalized coverage file found"
         } else {
-          Write-Host "Coverage file NOT found"
+          Write-Host "Normalized coverage file NOT found"
         }
       shell: powershell
 
